<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/homeback"
        android:layout_width="414dp"
        android:layout_height="204dp"
        android:contentDescription="@string/homeback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hall_back" />

    <TextView
        android:id="@+id/text_apptitle"
        android:layout_width="168dp"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="52dp"
        android:text="@string/apptitle"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="203dp"
        android:layout_height="133dp"
        android:background="#44F3D421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeback" />

    <View
        android:id="@+id/view2"
        android:layout_width="203dp"
        android:layout_height="133dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:background="#44F3D421"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/homeback" />

    <View
        android:id="@+id/view3"
        android:layout_width="203dp"
        android:layout_height="133dp"
        android:layout_marginTop="5dp"
        android:background="#44F3D421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <View
        android:id="@+id/view4"
        android:layout_width="203dp"
        android:layout_height="133dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:background="#44F3D421"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <View
        android:id="@+id/view5"
        android:layout_width="203dp"
        android:layout_height="133dp"
        android:layout_marginTop="5dp"
        android:background="#44F3D421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <View
        android:id="@+id/view6"
        android:layout_width="203dp"
        android:layout_height="133dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:background="#44F3D421"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view5"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <TextView
        android:id="@+id/type_entry1"
        android:layout_width="145dp"
        android:layout_height="38dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="52dp"
        android:text="@string/type_entry1"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/homeback" />

    <TextView
        android:id="@+id/type_entry2"
        android:layout_width="145dp"
        android:layout_height="38dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="52dp"
        android:text="@string/type_entry2"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/homeback" />

    <TextView
        android:id="@+id/type_entry3"
        android:layout_width="145dp"
        android:layout_height="38dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="52dp"
        android:text="@string/type_entry3"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3" />

    <TextView
        android:id="@+id/type_entry4"
        android:layout_width="145dp"
        android:layout_height="38dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="52dp"
        android:text="@string/type_entry4"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toTopOf="@+id/view4" />

    <TextView
        android:id="@+id/type_entry5"
        android:layout_width="145dp"
        android:layout_height="38dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="52dp"
        android:text="@string/type_entry5"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/view5"
        app:layout_constraintTop_toTopOf="@+id/view5" />

    <TextView
        android:id="@+id/type_entry6"
        android:layout_width="145dp"
        android:layout_height="38dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="52dp"
        android:text="@string/type_entry6"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/view6"
        app:layout_constraintTop_toTopOf="@+id/view6" />

    <Button
        android:id="@+id/button_mypre"
        android:layout_width="101dp"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@android:color/transparent"
        android:text="@string/button_mypre"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_myinfo"
        android:layout_width="101dp"
        android:layout_height="58dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@android:color/transparent"
        android:text="@string/button_myinfo"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_mypre" />

</androidx.constraintlayout.widget.ConstraintLayout>