<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/homeback"
        android:layout_width="414dp"
        android:layout_height="204dp"
        android:contentDescription="@string/homeback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hall_back" />

    <TextView
        android:id="@+id/text_apptitle"
        android:layout_width="168dp"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="52dp"
        android:text="@string/apptitle"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view7"
        android:layout_width="203dp"
        android:layout_height="133dp"
        android:background="#44F3D421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeback" />

    <View
        android:id="@+id/view8"
        android:layout_width="203dp"
        android:layout_height="133dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:background="#44F3D421"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view7"
        app:layout_constraintTop_toBottomOf="@+id/homeback" />

    <TextView
        android:id="@+id/provider_entry1"
        android:layout_width="105dp"
        android:layout_height="36dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="52dp"
        android:text="@string/provider_entry1"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/view7"
        app:layout_constraintTop_toTopOf="@+id/view7" />

    <TextView
        android:id="@+id/provider_entry2"
        android:layout_width="105dp"
        android:layout_height="36dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="52dp"
        android:text="@string/provider_entry2"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/view8"
        app:layout_constraintTop_toTopOf="@+id/view8" />

    <Button
        android:id="@+id/provider_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:background="@android:color/transparent"
        android:text="@string/button_proinfo"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>