<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/homeback8"
        android:layout_width="414dp"
        android:layout_height="204dp"
        android:contentDescription="@string/homeback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hall_back" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="72dp"
        android:layout_height="60dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/button_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/abc_vector_test" />

    <TextView
        android:id="@+id/text_apptitle8"
        android:layout_width="168dp"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="52dp"
        android:text="@string/apptitle"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/info_entry"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:background="@drawable/button_edge"
        android:text="商家名称"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeback8" />

    <Button
        android:id="@+id/info_entry14"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:background="@drawable/button_edge"
        android:text="@string/info_entry3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_entry" />

    <Button
        android:id="@+id/info_entry15"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:background="@drawable/button_edge"
        android:text="地址"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_entry14" />

    <Button
        android:id="@+id/info_entry13"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:background="@drawable/button_edge"
        android:text="简介"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_entry15" />

</androidx.constraintlayout.widget.ConstraintLayout>