<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/homeback5"
        android:layout_width="414dp"
        android:layout_height="204dp"
        android:contentDescription="@string/homeback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hall_back" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="72dp"
        android:layout_height="60dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/button_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/abc_vector_test" />

    <TextView
        android:id="@+id/text_apptitle5"
        android:layout_width="168dp"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="52dp"
        android:text="@string/apptitle"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/info_entry8"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:background="@drawable/button_edge"
        android:text="服务名称"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeback5" />

    <Button
        android:id="@+id/info_entry9"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:background="@drawable/button_edge"
        android:text="服务类型"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_entry8" />

    <Button
        android:id="@+id/info_entry10"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:background="@drawable/button_edge"
        android:text="可预约时间"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_entry9" />

    <Button
        android:id="@+id/info_entry11"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:background="@drawable/button_edge"
        android:text="服务周期与收费"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_entry10" />

    <Button
        android:id="@+id/info_entry12"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:background="@drawable/button_edge"
        android:text="每周期预约数"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_entry11" />

    <Button
        android:id="@+id/info_entry16"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:background="@drawable/button_edge"
        android:text="服务详情"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_entry12" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/transparent"
        android:text="删除服务"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3" />

</androidx.constraintlayout.widget.ConstraintLayout>